# ECommerce_Django_OpenSpec

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  env_utility.py  main.py  pyproject.toml
.github/workflows/: ci.yml
backups/: categories_backup_20260201080757.json
config/: settings.py  urls.py
docs/: category-guide.md  migration-run-checklist.md
docs/spec/: product-image-deployment.md  product-image-guide.md
openspec/: AGENTS.md  config.yaml  project.md
openspec/changes/add-product-admin/: design.md  tasks.md
openspec/changes/add-product-categories/: design.md  proposal.md  tasks.md
openspec/changes/add-product-image-upload/: design.md  proposal.md  tasks.md
openspec/specs/product-categories/: spec.md
scripts/: check_mptt.py  rebuild_mptt_run.py
todolist_app/: admin.py  apps.py  forms.py  image_utils.py  models.py  urls.py  views.py  views_api.py
todolist_app/migrations/: 0001_initial.py  0002_todo_user.py  0003_blogpost.py  0004_product.py  0005_productimage.py  0006_category_product_categories.py  0007_convert_categories_to_mptt.py  0008_add_mptt_fields_and_populate.py  0009_remove_category_level_remove_category_lft_and_more.py  0010_add_mptt_fields_back.py
todolist_app/templates/: base.html  csrf_test.html  hello.html
todolist_app/tests/: test_category_admin.py  test_category_integration.py  test_category_model.py  test_integration.py  test_models.py  test_mptt.py  test_product.py  test_product_image_deletion.py
todolist_app/utils/: markdown_renderer.py
(+27 files in other folders)
